--- a/index.html
+++ b/index.html
@@ -6,5 +6,12 @@
     </head>
     <body>
         <h1>Odin Recipes</h1>
+        <ul>
+          <li><a href="./recipes/bananabread.html"></a></li>
+          <li><a href="./recipes/quesadilla.html"></a> </li>
+          <li><a href="./recipes/poutine.html"></a> </li>
+        </ul>
+
+
     </body>
 </html>
