--- a/recipes/bananabread.html
+++ b/recipes/bananabread.html
@@ -7,6 +7,21 @@
     <title>Banana Bread</title>
 </head>
 <body>
-    
+    <h1><strong>Banana Bread</strong></h1>
+    <img src="">
+    <h2>Description</h2>
+      <p>
+          Banana bread is ...
+      </p>
+    <h2>Ingredients</h2>
+    <ul>
+      <li>ingredient 1</li>  
+      <li>ingredient 1</li> 
+    </ul> 
+    <h2>Steps</h2>
+    <ol>
+        <li>step1</li>
+        <li>step2</li>
+    </ol>
 </body>
 </html>
