Resized image & Added ingredients

--- a/recipes/bananabread.html
+++ b/recipes/bananabread.html
@@ -8,23 +8,32 @@
 </head>
 <body>
     <h1><strong>Banana Bread</strong></h1>
-    <img src="../img/bananabread.jpg">
+    <img src="../img/bananabread.jpg"
+     witdth="400"
+     height="400">
     <h2>Description</h2>
       <p>
-          Banana bread is a fairly simple and easy to make. It's also crazy good. Because of that, it's become quite a famous type of bread to make. On top of bananas, nuts, chocolate chips and fruit like blueberries can be<br>
-          added to the bread for added flavor and texture. It is also possible to make Gluten-free banana bread, although this recipe will not cover it. See this <a href="https://www.simplyrecipes.com/recipes/gluten_free_banana_bread/" target="_blank">Gluten-free banana bread</a> recipe for more info.
+          Banana bread is simple and easy to make. It's also crazy good. Because of that, it's become quite a famous type of bread to make.<br>
+          On top of bananas, nuts, chocolate chips and fruit like blueberries can be added to the bread for added flavor and texture. It is also<br>
+          possible to make <em>Gluten-free</em> banana bread, although this recipe will not cover it. See this <a href="https://www.simplyrecipes.com/recipes/gluten_free_banana_bread/" target="_blank">Gluten-free banana bread</a> recipe for more info.
           <!--target="_blank" opens the link in a new tab-->
       </p>
       <p>
           This recipe provides around 10 servings from 1 loaf. <br>
           From start to finish, it should take around an hour to prepare the bread. <br>
-          The ingredients are fairly inexpensive and easy to obtain, it should cost you around 3$ to make a loaf, <strike>unless maybe you shop at Whole Foods</strike>.
+          The ingredients are fairly easy to obtain and inexpensive, <strike>unless maybe if you shop at Whole Foods</strike>.
           <!--<strike> does a strike through the text-->
       </p>
     <h2>Ingredients</h2>
     <ul>
-      <li>ingredient 1</li>  
-      <li>ingredient 1</li> 
+      <li>2-3 bananas</li>  
+      <li>1/3 cup of (melted) butter</li> 
+      <li>1/2 a teaspoon of salt</li>
+      <li>1 pinch of salt</li>
+      <li>3/4 cup of sugar</li>
+      <li>1 large egg</li>
+      <li>1 teaspoon of vanilla extract</li>
+      <li>1 1/2 cups of flour</li>
     </ul> 
     <h2>Steps</h2>
     <ol>
