--- a/recipes/bananabread.html
+++ b/recipes/bananabread.html
@@ -28,7 +28,7 @@
     <ul>
       <li>2-3 bananas</li>  
       <li>1/3 cup of (melted) butter</li> 
-      <li>1/2 a teaspoon of salt</li>
+      <li>1/2 a teaspoon of baking soda</li>
       <li>1 pinch of salt</li>
       <li>3/4 cup of sugar</li>
       <li>1 large egg</li>
@@ -37,8 +37,12 @@
     </ul> 
     <h2>Steps</h2>
     <ol>
-        <li>step1</li>
-        <li>step2</li>
+        <li>Preheat oven to 350°F (175°C)</li>
+        <li>Mash bananas in a mixing bowl, add butter, and stir  </li>
+        <li>Mix in the baking soda, salt, sugar, beaten egg, vanilla extract. Then add the flour (in that order)</li>
+        <li>Pour the mix in a buttered loaf pan</li>
+        <li>Bake for 55 to 65 minutes at 350°F (175°C)</li>
+        <li>Let cool completely and serve. <em>Enjoy!</em></li>
     </ol>
 </body>
 </html>
