Added ingredients & steps. quesadilla completed

--- a/recipes/quesadilla.html
+++ b/recipes/quesadilla.html
@@ -11,7 +11,7 @@
         height="400">
         <h2>Description</h2>
         <p>
-          A quesadilla is a cooked tortilla (usually corn) filled with mainly cheese, but meat, cooked vegetables and spices can be added <br>
+          A quesadilla is a cooked tortilla (corn or flour) filled with mainly cheese, but meat, cooked vegetables and spices can be added <br>
           aswell. In this recipe, we'll be making a chicken quesadilla with some cooked veggies. This dish is extremely simple, cheap, and <br>
           fast to make. <em>Perfect for students</em>! The quesadilla is a famous mexican dish, that is served across the world. <br>
         </p>
@@ -21,12 +21,34 @@
 
         <h2>Ingredients</h2>
         <ul>
-            <li></li>
+            <li>1 pound skinless, boneless chicken breast, diced</li>
+            <li>1 (1.27 ounce) packet fajita seasoning</li>
+            <li>1 tablespoon vegetable oil</li>
+            <li>2 green and 2 red bell peppers, chopped</li>
+            <li>1 onion, chopped</li>
+            <li>10 flour tortillas</li>
+            <li>1 package shredded Cheddar cheese and 1 package shredded Monterey Jack cheese</li>
         </ul>
 
         <h2>Steps</h2>
         <ol>
-            <li></li>
+            <li>Preheat the broiler. Lightly grease a baking sheet. </li>
+            <br> <!-- <br>'s here just to make some space. Easier to read-->
+            <li>Toss chicken with fajita seasoning, then spread onto the prepared baking sheet. <br>
+                Place under the broiler and cook until chicken is cooked through and no longer <br>
+                pink in the center, about 5 minutes.</li>
+            <br>
+            <li>Preheat the oven to 350 degrees F (175 degrees C).</li>
+            <br>
+            <li>Heat oil in a large saucepan over medium heat. Stir in bell peppers, onion, and <br>
+                broiled chicken. Cook and stir until vegetables have softened, about 10 minutes.</li>
+            <br>
+            <li>Layer half of each tortilla with chicken and vegetable mixture, Cheddar cheese, <br>
+                Monterey Jack cheese, and bacon bits. Fold tortillas in half and place onto a baking sheet.</li>
+            <br>    
+            <li>Bake quesadillas in the preheated oven until cheeses have melted, about 10 minutes. <br>
+                Cut each quesadilla into wedges and serve.</li>    
+            <br>
         </ol>
     </body>
 </html>
