--- a/recipes/shoyu-ramen.html
+++ b/recipes/shoyu-ramen.html
@@ -5,18 +5,42 @@
         <title>Shōyu Ramen</title>
     </head>
     <body>
-        <h1><strong>Shōyu Ramen</strong></h1>
+        <h1><strong>Shōyu Ramen・醤油ラーメン</strong></h1>
         <img src="../img/shoyu-ramen.jpg"
-        width="400"
+        width="550" 
         height="400">
         <h2>Description</h2>
         <p>
-            
+          Ramen is a japanese doodle dish. It generally consists of chinese-style noodles that are served in a broth and accompanied by<br>
+          various toppings (meat, seafood, vegetables). Different types of ramen exist, we'll be making Shōyu (soy sauce) ramen. Shōyu<br>
+          ramen uses soy sauce and chicken based broth, and is accompanied by toppings like pork belly, egg, and green onions. <br>
+          <br>
+          Ditch the cup ramen, try this stuff. It's <b>bomb</b>. 
         </p>
 
         <h2>Ingredients</h2>
         <ul>
-            <li></li>
+            <li>Ramen noodles, store bought, or made from scratch (<a href="https://www.chopstickchronicles.com/easy-ramen-noodles-recipe-%e3%83%a9%e3%83%bc%e3%83%a1%e3%83%b3%ef%bc%89/"target="_blank">link</a> recipe) </li>
+            <br>
+            <li>Broth</li>
+              <ul>
+                <li>chicken stock</li>
+                <li>soy sauce</li>
+                <li>garlic</li>
+                <li>ginger</li>
+                <li>green onion</li>
+              </ul>
+              <br>
+            <li>Toppings</li>
+            <ul>
+                <li>Chasu sliced pork belly</li>
+                <li>soft boiled egg</li>
+                <li>Naruto (pinwheel fish cake)</li>
+                <li>Menma (bamboo shoots)</li>
+                <li>Corn</li>
+                <li>Bean spouts</li>
+                <li>Sliced scallions</li>
+            </ul>  
         </ul>
 
         <h2>Steps</h2>
