Updated index & Added to do's on shoyu

--- a/index.html
+++ b/index.html
@@ -7,9 +7,9 @@
     <body>
         <h1>Odin Recipes</h1>
         <ul>
-          <li><a href="./recipes/bananabread.html"></a></li>
-          <li><a href="./recipes/quesadilla.html"></a> </li>
-          <li><a href="./recipes/poutine.html"></a> </li>
+          <li><a href="./recipes/bananabread.html">Banana Bread</a></li>
+          <li><a href="./recipes/quesadilla.html">Chicken Quesadilla</a></li>
+          <li><a href="./recipes/shoyu-ramen.html">Shōyu Ramen (醤油ラーメン) </a></li>
         </ul>
 
 
