--- a/recipes/shoyu-ramen.html
+++ b/recipes/shoyu-ramen.html
@@ -18,7 +18,7 @@
           Ditch the cup ramen, try this stuff. It's <b>bomb</b>. 
         </p>
 
-        <h2>Ingredients</h2>
+        <h2>Ingredients</h2> <!--Quantities???-->
         <ul>
             <li>Ramen noodles, store bought, or made from scratch (<a href="https://www.chopstickchronicles.com/easy-ramen-noodles-recipe-%e3%83%a9%e3%83%bc%e3%83%a1%e3%83%b3%ef%bc%89/"target="_blank">link</a> recipe) </li>
             <br>
@@ -43,9 +43,12 @@
             </ul>  
         </ul>
 
-        <h2>Steps</h2>
+        <h2>Steps</h2> <!--Wayy to general and vague, need more precise steps-->
         <ol>
-            <li></li>
+            <li>Make the broth</li>
+            <li>Cook the noodles, drain them, add them to another bowl</li>
+            <li>Add noodles to the broth</li>
+            <li>Add the toppings</li>
         </ol>
     </body>
 </html>
