--- a/recipes/bananabread.html
+++ b/recipes/bananabread.html
@@ -44,5 +44,6 @@
         <li>Bake for 55 to 65 minutes at 350°F (175°C)</li>
         <li>Let cool completely and serve. <em>Enjoy!</em></li>
     </ol>
+    <h3><a href="../index.html">Back</a></h3>
 </body>
 </html>
