--- a/recipes/quesadilla.html
+++ b/recipes/quesadilla.html
@@ -50,6 +50,8 @@
                 Cut each quesadilla into wedges and serve.</li>    
             <br>
         </ol>
+        <h3><a href="./shoyu-ramen.html">Shōyu Ramen recipe</a></h3>
+        <h3><a href="./bananabread.html">Banana Bread recipe</a></h3>
         <h3><a href="../index.html">Back</a></h3>
     </body>
 </html>
