--- a/recipes/shoyu-ramen.html
+++ b/recipes/shoyu-ramen.html
@@ -51,5 +51,7 @@
             <li>Add the toppings</li>
         </ol>
     </body>
+    <h3><a href="./bananabread.html">Banana Bread recipe</a></h3>
+    <h3><a href="./quesadilla.html">Chicken Quesadilla recipe</a></h3>
     <h3><a href="../index.html">Back</a></h3>
 </html>
