--- a/recipes/shoyu-ramen.html
+++ b/recipes/shoyu-ramen.html
@@ -51,7 +51,9 @@
             <li>Add the toppings</li>
         </ol>
     </body>
-    <h3><a href="./bananabread.html">Banana Bread recipe</a></h3>
-    <h3><a href="./quesadilla.html">Chicken Quesadilla recipe</a></h3>
-    <h3><a href="../index.html">Back</a></h3>
+    <h4><a href="./bananabread.html">Banana Bread</a> recipe</h4>
+    <h4><a href="./quesadilla.html">Chicken Quesadilla</a> recipe</h4>
+    <h4><a href="../index.html">Main page</a></h4>
 </html>
+
+<!--https://www.chopstickchronicles.com/shoyu-ramen/#h-ingredients-needed-to-make-shoyu-ramen -->
