--- a/recipes/bananabread.html
+++ b/recipes/bananabread.html
@@ -44,8 +44,10 @@
         <li>Bake for 55 to 65 minutes at 350°F (175°C)</li>
         <li>Let cool completely and serve. <em>Enjoy!</em></li>
     </ol>
-    <h3><a href="./quesadilla.html">Chicken Quesadilla recipe</a></h3>
-    <h3><a href="./shoyu-ramen.html">Shōyu Ramen recipe</a></h3>
-    <h3><a href="../index.html">Back</a></h3>
+    <h4><a href="./quesadilla.html">Chicken Quesadilla</a> recipe</h4>
+    <h4><a href="./shoyu-ramen.html">Shōyu Ramen</a> recipe</h4>
+    <h4><a href="../index.html">Main page</a></h4>
 </body>
 </html>
+
+<!--source: https://www.simplyrecipes.com/recipes/banana_bread/-->
