--- a/recipes/bananabread.html
+++ b/recipes/bananabread.html
@@ -21,7 +21,7 @@
       <p>
           This recipe provides around 10 servings from 1 loaf. <br>
           From start to finish, it should take around an hour to prepare the bread. <br>
-          The ingredients are fairly easy to obtain and inexpensive, <strike>unless maybe if you shop at Whole Foods</strike>.
+          The ingredients are fairly easy to obtain and inexpensive, <strike>except maybe the egg currently</strike>.
           <!--<strike> does a strike through the text-->
       </p>
     <h2>Ingredients</h2>
