--- a/index.html
+++ b/index.html
@@ -2,10 +2,10 @@
 <html lang="en">
     <head>
         <meta charset="UTF-8">
-        <title>Odin Recipes</title>
+        <title>Recipes</title>
     </head>
     <body>
-        <h1>Odin Recipes</h1>
+        <h1>Recipes</h1>
         <ul>
           <li><a href="./recipes/bananabread.html">Banana Bread</a></li>
           <li><a href="./recipes/quesadilla.html">Chicken Quesadilla</a></li>
