styling & layout main page

--- a/index.html
+++ b/index.html
@@ -2,16 +2,17 @@
 <html lang="en">
     <head>
         <meta charset="UTF-8">
+        <link rel="stylesheet" href="styles.css"\>
         <title>Recipes</title>
     </head>
     <body>
-        <h1>Recipes</h1>
-        <ul>
-          <li><a href="./recipes/bananabread.html">Banana Bread</a></li>
-          <li><a href="./recipes/quesadilla.html">Chicken Quesadilla</a></li>
-          <li><a href="./recipes/shoyu-ramen.html">Shōyu Ramen (醤油ラーメン) </a></li>
-        </ul>
-
-
+        <div class="mainpage">
+            <h1 class="title">Yummy Recipes</h1>
+            <ul class="links">
+                <p class="banana"><a href="./recipes/bananabread.html">Banana Bread</a></p>
+                <p class="quesadilla"><a href="./recipes/quesadilla.html">Chicken Quesadilla</a></p>
+                <p class="ramen"><a href="./recipes/shoyu-ramen.html">Shōyu Ramen (醤油ラーメン) </a></p>
+            </ul>
+        </div>
     </body>
 </html>
