added main page layout&positioning + colors

--- a/index.html
+++ b/index.html
@@ -6,13 +6,13 @@
         <title>Recipes</title>
     </head>
     <body>
-        <div class="mainpage">
-            <h1 class="title">Yummy Recipes</h1>
-            <ul class="links">
-                <p class="banana"><a href="./recipes/bananabread.html">Banana Bread</a></p>
-                <p class="quesadilla"><a href="./recipes/quesadilla.html">Chicken Quesadilla</a></p>
-                <p class="ramen"><a href="./recipes/shoyu-ramen.html">Shōyu Ramen (醤油ラーメン) </a></p>
+       <!-- <div class="mainpage"> -->
+            <h1 class="main title">Yummy Recipes</h1>
+            <ul class="linksbox">
+                <p class="link"><a href="./recipes/bananabread.html">Banana Bread</a></p>
+                <p class="link"><a href="./recipes/quesadilla.html">Chicken Quesadilla</a></p>
+                <p class="link"><a href="./recipes/shoyu-ramen.html">Shōyu Ramen (醤油ラーメン) </a></p>
             </ul>
-        </div>
+       <!-- </div> -->
     </body>
 </html>
