--- a/recipes/bananabread.html
+++ b/recipes/bananabread.html
@@ -4,15 +4,16 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="stylesheet" href="../styles.css"\>
     <title>Banana Bread</title>
 </head>
 <body>
-    <h1><strong>Banana Bread</strong></h1>
+    <h1 class="title main"><strong>Banana Bread</strong></h1>
     <img src="../img/bananabread.jpg"
      witdth="400"
      height="400">
-    <h2>Description</h2>
-      <p>
+    <h2 class="title">Description</h2>
+      <p class="contentbox">
           Banana bread is simple and easy to make. It's also crazy good. Because of that, it's become quite a famous type of bread to make.<br>
           On top of bananas, nuts, chocolate chips and fruit like blueberries can be added to the bread for added flavor and texture. It is also<br>
           possible to make <em>Gluten-free</em> banana bread, although this recipe will not cover it. See this <a href="https://www.simplyrecipes.com/recipes/gluten_free_banana_bread/" target="_blank">Gluten-free banana bread</a> recipe for more info.
@@ -24,7 +25,7 @@
           The ingredients are fairly easy to obtain and inexpensive, <strike>except maybe the egg currently</strike>.
           <!--<strike> does a strike through the text-->
       </p>
-    <h2>Ingredients</h2>
+    <h2 class="title">Ingredients</h2>
     <ul>
       <li>2-3 bananas</li>  
       <li>1/3 cup of (melted) butter</li> 
@@ -35,7 +36,7 @@
       <li>1 teaspoon of vanilla extract</li>
       <li>1 1/2 cups of flour</li>
     </ul> 
-    <h2>Steps</h2>
+    <h2 class="title">Steps</h2>
     <ol>
         <li>Preheat oven to 350°F (175°C)</li>
         <li>Mash bananas in a mixing bowl, add butter, and stir  </li>
@@ -44,9 +45,9 @@
         <li>Bake for 55 to 65 minutes at 350°F (175°C)</li>
         <li>Let cool completely and serve. <em>Enjoy!</em></li>
     </ol>
-    <h4><a href="./quesadilla.html">Chicken Quesadilla</a> recipe</h4>
-    <h4><a href="./shoyu-ramen.html">Shōyu Ramen</a> recipe</h4>
-    <h4><a href="../index.html">Main page</a></h4>
+    <h4 class="link"><a href="./quesadilla.html">Chicken Quesadilla</a> recipe</h4>
+    <h4 class="link"><a href="./shoyu-ramen.html">Shōyu Ramen</a> recipe</h4>
+    <h4 class="link"><a href="../index.html">Main page</a></h4>
 </body>
 </html>
 
