--- a/recipes/shoyu-ramen.html
+++ b/recipes/shoyu-ramen.html
@@ -3,13 +3,14 @@
     <head>
         <meta charset="UTF-8">
         <title>Shōyu Ramen</title>
+        <link rel="stylesheet" href="../styles.css"\>
     </head>
     <body>
-        <h1><strong>Shōyu Ramen・醤油ラーメン</strong></h1>
+        <h1 class="main title long"><strong>Shōyu Ramen・醤油ラーメン</strong></h1>
         <img src="../img/shoyu-ramen.jpg"
         width="550" 
         height="400">
-        <h2>Description</h2>
+        <h2 class="title">Description</h2>
         <p>
           Ramen is a japanese doodle dish. It generally consists of chinese-style noodles that are served in a broth and accompanied by<br>
           various toppings (meat, seafood, vegetables). Different types of ramen exist, we'll be making Shōyu (soy sauce) ramen. Shōyu<br>
@@ -18,7 +19,7 @@
           Ditch the cup ramen, try this stuff. It's <b>bomb</b>. 
         </p>
 
-        <h2>Ingredients</h2> <!--Quantities???-->
+        <h2 class="title">Ingredients</h2> <!--Quantities???-->
         <ul>
             <li>Ramen noodles, store bought, or made from scratch (<a href="https://www.chopstickchronicles.com/easy-ramen-noodles-recipe-%e3%83%a9%e3%83%bc%e3%83%a1%e3%83%b3%ef%bc%89/"target="_blank">link</a> recipe) </li>
             <br>
@@ -43,7 +44,7 @@
             </ul>  
         </ul>
 
-        <h2>Steps</h2> <!--Wayy to general and vague, need more precise steps-->
+        <h2 class="title">Steps</h2> <!--Wayy to general and vague, need more precise steps-->
         <ol>
             <li>Make the broth</li>
             <li>Cook the noodles, drain them, add them to another bowl</li>
@@ -51,9 +52,9 @@
             <li>Add the toppings</li>
         </ol>
     </body>
-    <h4><a href="./bananabread.html">Banana Bread</a> recipe</h4>
-    <h4><a href="./quesadilla.html">Chicken Quesadilla</a> recipe</h4>
-    <h4><a href="../index.html">Main page</a></h4>
+    <h4 class="link"><a href="./bananabread.html">Banana Bread</a> recipe</h4>
+    <h4 class="link"><a href="./quesadilla.html">Chicken Quesadilla</a> recipe</h4>
+    <h4 class="link"><a href="../index.html">Main page</a></h4>
 </html>
 
 <!--https://www.chopstickchronicles.com/shoyu-ramen/#h-ingredients-needed-to-make-shoyu-ramen -->
